--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,10 +3,12 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.cinemachine": "2.6.11",
     "com.unity.collab-proxy": "1.15.12",
+    "com.unity.entities": "0.51.1-preview.21",
     "com.unity.ide.rider": "2.0.7",
-    "com.unity.ide.visualstudio": "2.0.14",
-    "com.unity.ide.vscode": "1.2.4",
+    "com.unity.ide.visualstudio": "2.0.16",
+    "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.3.0",
+    "com.unity.jobs": "0.70.0-preview.7",
     "com.unity.render-pipelines.universal": "10.8.1",
     "com.unity.scripting.python": "4.0.0-pre.1",
     "com.unity.shadergraph": "7.3.1",
